[package]
name = "onair-rs"
version = "0.1.0"
authors = ["Andrew Yochum <yochum@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
rocket = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
scroll_phat_hd = "*"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]