[package]
name = "onair-rs"
version = "0.1.0"
authors = ["Andrew Yochum <yochum@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
reqwest = "0.9.18"
rustc-serialize = "0.3.24"
rocket = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
scroll_phat_hd = "*"
subprocess = "0.1.18"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]